--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Exploring Git-Hub</h1>
+    <h3> git add</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia dolore dolorum provident vitae architecto sint impedit deleniti veniam expedita, optio deserunt placeat rem voluptatibus perspiciatis fugiat veritatis nam nobis officiis. Cupiditate adipisci vero sed error voluptas accusantium animi corporis iusto?</p>
 </body>
 </html>
